--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -7,6 +7,7 @@ html {
 }
 :root {
   --primaryFont: 'Inter', sans-serif;
+  --secondaryFont: 'Bebas Neue', cursive;
   --transition: all 0.3s linear;
   --blackColor: #000000;
   --lightBlack: #010101;
@@ -23,6 +24,11 @@ html {
 
 body {
   font-family: var(--primaryFont);
+}
+
+select {
+  height: 30px;
+  cursor: pointer;
 }
 /*
 ==============
@@ -45,6 +51,26 @@ Hero section
   font-weight: bold;
 }
 
+/*Cart buton*/
+
+.add-btn {
+  width: 400px;
+  height: 46px;
+}
+.add-btn button {
+  background: var(--blackColor);
+  width: 100%;
+  height: 100%;
+  font-size: 1rem;
+  border: none;
+  color: var(--whiteColor);
+}
+
+@media screen and (max-width: 900px) {
+  .add-btn {
+    width: 350px;
+  }
+}
 /*
 ================
 Products Page
@@ -160,4 +186,65 @@ Products Page
 }
 .footer-link img {
   width: 110px;
+}
+/* Product Details Page*/
+.item-details-container {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+.single-item-img {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+.details-page-boxes div {
+  width: 55px;
+  height: 55px;
+  border: 0.5px solid var(--borderColor);
+}
+.single-item-details {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.single-item-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+.single-item-header h2 {
+  font-family: var(--secondaryFont);
+}
+.single-product-info {
+  margin-block: 2rem;
+}
+.single-product-info p {
+  text-align: justify;
+}
+
+.product-size-container {
+  margin-block: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+@media screen and (max-width: 768px) {
+  .item-details-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .single-item-details {
+    padding-inline: 1rem;
+  }
+  .single-item-details {
+    width: 350px;
+  }
 }
