--- a/src/App.css
+++ b/src/App.css
@@ -357,11 +357,35 @@ label {
 
 /*
 ==================
-Recovery Page Header
+Recovery Page 
 ==================
 */
 .recovery-page-header {
   display: flex;
   flex-direction: center;
   align-items: center;
+}
+
+/*
+================
+Info Page
+================
+*/
+.info-section {
+  padding-inline: 1.5rem;
+}
+.single-info-item {
+  margin-block: 2rem;
+}
+.single-info-item p {
+  padding-top: 0.5rem;
+}
+
+@media screen and (min-width: 900px) {
+  .info-section {
+    padding-inline: 2.5rem;
+  }
+  .single-info-item p {
+    max-width: 80%;
+  }
 }
