--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,6 @@ Products Page
 ================
 */
 .products-menu {
-  padding-top: 1rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -361,7 +360,7 @@ label {
 
 /*
 ==================
-Recovery Page 
+Recovery Page
 ==================
 */
 .recovery-page-header {
@@ -458,14 +457,18 @@ Cart Component
 ==============
 */
 .cart-container {
+  position: fixed;
   padding-inline: 1.5rem;
   right: 0;
   z-index: 2;
-  transition: var(--transition);
-  width: 450px;
+  /* transform: translateX(-100%); */
+  transition: all 1s;
+  width: 0;
+  background: rgba(0, 0, 0, 0.2);
   min-height: 100vh;
-  margin-right: -400px;
+  box-shadow: -2px 0px 2px 1px #aaaaaa;
 }
+
 .cart-header {
   padding-top: 1rem;
 }
@@ -486,7 +489,8 @@ Cart Component
   height: 70px;
 }
 .cart-open {
-  margin-right: 0;
+  transform: translatex(0%);
+  width: 450px;
 }
 
 .cart-buttons {
